--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="tw-flex">
           <div class="tw-h-[450px] tw-w-[300px]">
             <img
-              src="./assets/images/tela2.png"
+              src="./assets/tela2.png"
               alt="product1"
               class="tw-h-full tw-w-full tw-object-contain"
             />
@@ -208,7 +208,7 @@
         <div class="tw-flex">
           <div class="tw-h-[450px] tw-w-[300px]">
             <img
-              src="./assets/images/Página Principal Preto.png"
+              src="./assets/Página Principal Preto.png"
               alt="product1"
               class="tw-h-full tw-w-full tw-object-contain"
             />
