--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     class="tw-h-[150px] tw-w-[150px] tw-overflow-hidden tw-rounded-full max-lg:tw-h-[80px] max-lg:tw-w-[80px]"
                   >
                     <img
-                      src="./assets/images/people/women.jpg"
+                      src="./assets/images/dowload.jpg"
                       class="tw-h-full tw-w-full tw-object-cover"
                       alt="women"
                     />
@@ -323,7 +323,7 @@
                     class="tw-h-[150px] tw-w-[150px] tw-overflow-hidden tw-rounded-full max-lg:tw-h-[80px] max-lg:tw-w-[80px]"
                   >
                     <img
-                      src="./assets/images/people/women.jpg"
+                      src="./assets/images/download.jpg"
                       class="tw-h-full tw-w-full tw-object-cover"
                       alt="women"
                     />
